Feature/SU-20: Parametrización tasa máxima legal